# simulator

./: .gitmodules
colcon_ws/src/battery/: CMakeLists.txt  package.xml
colcon_ws/src/battery/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
colcon_ws/src/battery/install/battery/share/battery/: local_setup.sh  package.sh
colcon_ws/src/battery/launch/: battery_launch.py
colcon_ws/src/battery/log/: latest_build
colcon_ws/src/battery/msg/: CurrentInfos.msg
colcon_ws/src/battery/src/: battery_state.cpp  config.h  discharging_data.csv  subscriber.cpp
colcon_ws/src/mig_magnetometer/: package.xml  setup.cfg  setup.py
colcon_ws/src/mig_magnetometer/mig_magnetometer/: Compass_publisher.py  odometry_subscriber.py  subpub_magneto.py  tools2.py
colcon_ws/src/mig_magnetometer/mig_magnetometer/tools_magneto/: __init__.py  tools.py
colcon_ws/src/simulator/launch/: simulator.launch.py
